[package]
name = "lyon-circle-mre"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.13.1", features = ["derive"] }
color-eyre = "0.6.2"
lyon = "1.0.1"
tokio = { version = "1.30.0", features = ["rt", "macros", "rt-multi-thread"] }
wgpu = "0.17.0"
winit = "0.28.6"
